calico_versioned_docs/version-3.27/getting-started/kubernetes/windows-calico/requirements.mdx
---
description: Review the requirements for Calico for Windows.
---

import variables from '@site/calico_versioned_docs/version-3.27/variables';

# Requirements

## What's supported in this release

✓ Install:
- Manual install for Kubernetes clusters on Windows nodes
- Operator install for Kubernetes clusters using hostprocess containers (HPC) on Windows nodes

✓ Platforms: Kubernetes, OpenShift, RKE, EKS, AKS

✓ Networking:

- Kubernetes, on-premises: Calico CNI with BGP or VXLAN
- OpenShift: Calico CNI with BGP or VXLAN
- Rancher Kubernetes Engine: Calico CNI with BGP or VXLAN
- EKS: VPC CNI
- AKS: Azure CNI

## Requirements

Because the Kubernetes and {variables.prodname} control components do not run on Windows yet, a hybrid Linux/Windows cluster is required.

### CNI and networking options

The following table summarizes the networking options and considerations.

| Networking         | Components                                                                                  | **Value/Content**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| ------------------ | ------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| {variables.prodname} BGP   | Windows CNI plugin:<br /><br />calico.exe<br /><br />Linux: {variables.prodname} for policy and networking      | {variables.prodname}'s native networking approach, supports:<br/>- Auto-configured node-to-node BGP mesh over an L2 fabric<br/>- Peering with external routers for an L3 fabric<br/>- {variables.prodname} IPAM and IP aggregation (with some limitations)<br/>- Route reflectors (including the new in-cluster route reflector introduced in {variables.prodname} v3.3). **Note**: Windows node cannot act as route reflectors.<br/>- Kubernetes API datastore driver<br/><br />**AWS users**: If running on AWS, you must disable the source/dest check on your EC2 instances so that hosts can forward traffic on behalf of pods. |
| {variables.prodname} VXLAN | Windows CNI plugin:<br/>calico.exe<br /><br />Linux: {variables.prodname} for policy and networking | {variables.prodname}'s VXLAN overlay, supports:<br/><br />- VXLAN overlay, which can traverse most networks.<br/>- Auto-configured node-to-node routing<br/>- {variables.prodname} IPAM and IP aggregation (with some limitations)<br/>- Kubernetes API datastore driver<br/>**Note**: VXLAN runs on UDP port 4789 (this is the only port supported by Windows), remember to open that port between your {variables.prodname} hosts in any firewalls / security groups.                                                                                                                                                              |
| Cloud provider     | Windows CNI plugin: win-bridge.exe<br /><br />Linux: {variables.prodname} policy-only               | A useful fallback, particularly if you have a Kubernetes cloud provider that automatically installs inter-host routes. {variables.prodname} has been tested with the standard **win-bridge.exe** CNI plugin so it should work with any networking provider that ultimately uses win-bridge.exe to network the pod (such as the Azure CNI plugin and cloud provider).                                                                                                                                                                                                                                                 |

:::note

If Calico CNI with VXLAN is used, BGP must be disabled. See the [installation reference](../../../reference/installation/api.mdx#operator.tigera.io/v1.BGPOption).

:::

### Datastores

When using Operator install, only Kubernetes datastore (kdd) is supported. When using the manual install, either kdd or etcd may be used, but the datastore for the Windows node/Kubernetes cluster must be the same as the datastore for the Linux control node. (You cannot mix datastores in {variables.prodnameWindows}.)

### Kubernetes version

See the [Kubernetes requirements](../requirements.mdx#kubernetes-requirements).

When using Operator install and Windows hostprocess containers (HPC), see [here for the additional requirements](operator.mdx#hpc-requirements).

Earlier versions may work, but we do not actively test {variables.prodnameWindows} against them, and they may have known issues and incompatibilities.

### Linux platform requirements

- At least one Linux Kubernetes worker node to run {variables.prodname}'s cluster-wide components that meets [Linux system requirements](../requirements.mdx), and is installed with {variables.prodname}. {variables.prodname} v3.12+ is required for manual installs, and v3.27+ for Operator installs.
- VXLAN or BGP without encapsulation is supported if using {variables.prodname} CNI. IPIP ({variables.prodname}'s default encapsulation mode) is not supported. Use the following command to turn off IPIP on the default IP pool.

```bash
kubectl patch ippool default-ipv4-ippool -p '{"spec":{"ipipMode":"Never","vxlanMode":"Always"}}'
```

- If using {variables.prodname} IPAM, strict affinity of IPAM configuration must be set to `true`.

```bash
kubectl patch ipamconfigurations default --type merge --patch='{"spec": {"strictAffinity": true}}'
```

:::note

For operator-managed Linux {variables.prodname} clusters, three Linux worker nodes are required in order to meet the high-availability requirements for Typha, which only runs on Linux nodes.

:::

### Windows platform requirements

- Windows versions:

  - Windows Server 1809 (build 17763.1432 or later)
  - Windows Server 2022 (build 20348.169 or later)

  :::note

  Windows Server version support differs for each Kubernetes version. Review the [Windows OS Version Support](https://kubernetes.io/docs/setup/production-environment/windows/intro-windows-in-kubernetes/#windows-os-version-support) table for the Windows Server versions supported by each Kubernetes version.

  :::

#### Operator install requirements

- Kubernetes v1.22+
- Enable HostProcess containers support. For Kubernetes v1.22, see [here](https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/#before-you-begin). For Kubernetes v1.23+, HostProcess containers are enabled by default.
- [containerd](https://kubernetes.io/docs/setup/production-environment/container-runtimes/#containerd) v1.6.0+
- The Windows nodes have joined the cluster.
- See [this section of the operator install guide for example commands](operator.mdx#hpc-requirements).

#### Manual install requirements

The {variables.prodnameWindows} standard manual installation is distributed as a **.zip archive**.

:::note

The manual method for installing {variables.prodnameWindows} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](operator.mdx#install-{variables.prodnamedashWindows}-using-the-operator). Support for this method will be dropped in a future {variables.prodname} version.

:::

- Be able to run commands as Administrator using PowerShell.
- Container runtime: [Docker](https://docs.microsoft.com/en-us/virtualization/windowscontainers/quick-start/set-up-environment?tabs=Windows-Server) or [containerd](https://kubernetes.io/docs/setup/production-environment/container-runtimes/#containerd) is installed and running. If containerd is running, it will be used as the container runtime otherwise Docker is assumed.
- Remote access to the Windows node via Remote Desktop Protocol (RDP), Windows Remote Management (WinRM) or ssh.
- If you are using {variables.prodname} BGP networking, the RemoteAccess service must be installed for the Windows BGP Router.
- Windows nodes support only a single IP pool type (so, if using a VXLAN pool, you should only use VXLAN throughout the cluster).
- TLS v1.2 enabled. For example:

```powershell
[Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
```

### EKS requirements

- The VPC controllers must be installed to run Windows pods.
- An instance role on the Windows instance must have permissions to get `namespaces` and get `secrets` in the calico-system namespace (or kube-system namespace if you are using a non operator-managed {variables.prodname} installation.)

### AKS requirements

- {variables.prodnameWindows} can be enabled only on newly created clusters.
- Non-HPC {variables.prodnameWindows} is available with Kubernetes version 1.20 or later

## Next steps

[Install Calico for Windows using operator](operator.mdx)
[Install Calico for Windows using the manual installation method](manual-install/standard.mdx)
