calico_versioned_docs/version-3.31/getting-started/kubernetes/windows-calico/requirements.mdx
---
description: Review the requirements for Calico for Windows.
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

# Requirements

## What's supported in this release

✓ Install:
- Operator install for Kubernetes clusters using hostprocess containers (HPC) on Windows nodes

✓ Platforms: Kubernetes, OpenShift, RKE, EKS, AKS

✓ Networking:

- Kubernetes, on-premises: Calico CNI with BGP or VXLAN
- OpenShift: Calico CNI with BGP or VXLAN
- Rancher Kubernetes Engine: Calico CNI with BGP or VXLAN
- EKS: VPC CNI
- AKS: Azure CNI

## Requirements

Because the Kubernetes and $[prodname] control components do not run on Windows yet, a hybrid Linux/Windows cluster is required.

### CNI and networking options

The following table summarizes the networking options and considerations.

| Networking         | Components                                                                                  | **Value/Content**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| ------------------ | ------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| $[prodname] BGP   | Windows CNI plugin:<br /><br />calico.exe<br /><br />Linux: $[prodname] for policy and networking      | $[prodname]'s native networking approach, supports:<br/>- Auto-configured node-to-node BGP mesh over an L2 fabric<br/>- Peering with external routers for an L3 fabric<br/>- $[prodname] IPAM and IP aggregation (with some limitations)<br/>- Route reflectors (including the new in-cluster route reflector introduced in $[prodname] v3.3). **Note**: Windows node cannot act as route reflectors.<br/>- Kubernetes API datastore driver<br/><br />**AWS users**: If running on AWS, you must disable the source/dest check on your EC2 instances so that hosts can forward traffic on behalf of pods. |
| $[prodname] VXLAN | Windows CNI plugin:<br/>calico.exe<br /><br />Linux: $[prodname] for policy and networking | $[prodname]'s VXLAN overlay, supports:<br/><br />- VXLAN overlay, which can traverse most networks.<br/>- Auto-configured node-to-node routing<br/>- $[prodname] IPAM and IP aggregation (with some limitations)<br/>- Kubernetes API datastore driver<br/>**Note**: VXLAN runs on UDP port 4789 (this is the only port supported by Windows), remember to open that port between your $[prodname] hosts in any firewalls / security groups.                                                                                                                                                              |
| Cloud provider     | Windows CNI plugin: win-bridge.exe<br /><br />Linux: $[prodname] policy-only               | A useful fallback, particularly if you have a Kubernetes cloud provider that automatically installs inter-host routes. $[prodname] has been tested with the standard **win-bridge.exe** CNI plugin so it should work with any networking provider that ultimately uses win-bridge.exe to network the pod (such as the Azure CNI plugin and cloud provider).                                                                                                                                                                                                                                                 |

:::note

If Calico CNI with VXLAN is used, BGP must be disabled. See the [installation reference](../../../reference/installation/api.mdx#bgpoption).

:::

### Datastores

When using Operator install, only Kubernetes datastore (kdd) is supported.

### Kubernetes version

See the [Kubernetes requirements](../requirements.mdx#kubernetes-requirements).

When using Operator install and Windows hostprocess containers (HPC), see [here for the additional requirements](operator.mdx#hpc-requirements).

Earlier versions may work, but we do not actively test $[prodnameWindows] against them, and they may have known issues and incompatibilities.

### Linux platform requirements

- At least one Linux Kubernetes worker node to run $[prodname]'s cluster-wide components that meets [Linux system requirements](../requirements.mdx), and is installed with $[prodname]. $[prodname] v3.27+ is required for Operator installs.
- VXLAN or BGP without encapsulation is supported if using $[prodname] CNI. IPIP ($[prodname]'s default encapsulation mode) is not supported. Turn off IPIP on the default IP pool.

  <Tabs groupId="ip-pool-management">
  <TabItem label="Operator managed IP pools" value="operator-managed">

  For IP pools managed through the `Installation` resource, patch the `Installation` to update the encapsulation. The operator reconciles these `IPPool` resources from the `Installation`, so direct edits to the `IPPool` are silently reverted.

  ```bash
  kubectl patch installation default --type=json \
    -p '[{"op":"replace","path":"/spec/calicoNetwork/ipPools/0/encapsulation","value":"VXLAN"}]'
  ```

  If your cluster has additional operator-managed IP pools, repeat the command for each, replacing `0` in `/spec/calicoNetwork/ipPools/0` with the index of the pool. Use `"None"` instead of `"VXLAN"` for BGP without encapsulation.

  </TabItem>
  <TabItem label="User managed IP pools" value="user-managed">

  For `IPPool` resources created directly (not through the `Installation`), patch the `IPPool`. For VXLAN:

  ```bash
  kubectl patch ippool default-ipv4-ippool -p '{"spec":{"ipipMode":"Never","vxlanMode":"Always"}}'
  ```

  For BGP without encapsulation, set both modes to `Never`:

  ```bash
  kubectl patch ippool default-ipv4-ippool -p '{"spec":{"ipipMode":"Never","vxlanMode":"Never"}}'
  ```

  </TabItem>
  </Tabs>

- If using $[prodname] IPAM, strict affinity of IPAM configuration must be set to `true`.

  ```bash
  kubectl patch ipamconfigurations default --type merge --patch='{"spec": {"strictAffinity": true}}'
  ```

:::note

For operator-managed Linux $[prodname] clusters, three Linux worker nodes are required to meet the high-availability requirements for Typha, which only runs on Linux nodes.

:::

### Windows platform requirements

- Windows versions:

  - Windows Server 1809 (build 17763.1432 or later)
  - Windows Server 2022 (build 20348.169 or later)

  :::note

  Windows Server version support differs for each Kubernetes version. Review the [Windows OS Version Support](https://kubernetes.io/docs/setup/production-environment/windows/intro-windows-in-kubernetes/#windows-os-version-support) table for the Windows Server versions supported by each Kubernetes version.

  :::

#### Operator install requirements

- Kubernetes v1.22+
- Enable HostProcess containers support. For Kubernetes v1.22, see [here](https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/#before-you-begin). For Kubernetes v1.23+, HostProcess containers are enabled by default.
- [containerd](https://kubernetes.io/docs/setup/production-environment/container-runtimes/#containerd) v1.6.0+
- The Windows nodes have joined the cluster.
- See [this section of the operator install guide for example commands](operator.mdx#hpc-requirements).

### EKS requirements

- The VPC controllers must be installed to run Windows pods.
- An instance role on the Windows instance must have permissions to get `namespaces` and get `secrets` in the calico-system namespace (or kube-system namespace if you are using a non operator-managed $[prodname] installation.)

### AKS requirements

- $[prodnameWindows] can be enabled only on newly created clusters.
- Non-HPC $[prodnameWindows] is available with Kubernetes version 1.20 or later

## Next steps

[Install Calico for Windows using operator](operator.mdx)
